--- a/index.html
+++ b/index.html
@@ -1,148 +1,92 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-  <title>🌱 Ферма</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <title>Моя ферма</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background: #f0f8f5;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    header {
-      width: 100%;
-      padding: 10px;
-      background: #4caf50;
-      color: white;
+      margin: 0;
+      padding: 0;
+      background: #e0f7fa;
       text-align: center;
-      font-size: 18px;
-      position: fixed;
-      top: 0;
-      left: 0;
     }
-
-    main {
-      margin-top: 60px; /* отступ под хедер */
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      overflow-y: auto;
-    }
-
     .garden {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 5px;
-      width: 90%;
-      max-width: 400px;
+      grid-template-columns: repeat(3, 100px);
+      grid-gap: 10px;
+      justify-content: center;
+      margin-top: 20px;
     }
-
     .plot {
-      width: 100%;
-      aspect-ratio: 1 / 1; /* квадратные грядки */
-      background: #c2b280;
-      border-radius: 8px;
+      width: 100px;
+      height: 100px;
+      background: #a1887f;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 14px;
-      cursor: pointer;
+      border-radius: 10px;
+      font-size: 24px;
     }
-
     .buttons {
-      margin-top: 10px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      justify-content: center;
+      margin-top: 20px;
     }
-
     button {
-      padding: 8px 12px;
-      font-size: 14px;
+      margin: 5px;
+      padding: 10px 20px;
+      font-size: 16px;
       border: none;
-      border-radius: 6px;
-      background: #4caf50;
-      color: white;
+      border-radius: 10px;
       cursor: pointer;
+      background: #00796b;
+      color: white;
     }
-
-    button:active {
-      background: #388e3c;
-    }
-
-    /* Магазин */
-    .shop {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.7);
+    #shop {
       display: none;
-      align-items: center;
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.6);
       justify-content: center;
+      align-items: center;
     }
-
-    .shop-content {
+    #shop .window {
       background: white;
       padding: 20px;
-      border-radius: 10px;
+      border-radius: 15px;
+      width: 80%;
       max-width: 300px;
-      width: 90%;
-      position: relative;
+      text-align: center;
     }
-
-    .close-btn {
-      position: absolute;
-      top: 5px;
-      right: 10px;
-      background: red;
-      color: white;
-      border: none;
-      border-radius: 50%;
-      width: 25px;
-      height: 25px;
-      cursor: pointer;
+    #shop button {
+      background: #d32f2f;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
-  <header>🌱 Ферма — 100 монет</header>
+  <h1>🌱 Моя ферма</h1>
+  <div class="garden">
+    <div class="plot">⬜</div>
+    <div class="plot">⬜</div>
+    <div class="plot">⬜</div>
+    <div class="plot">⬜</div>
+    <div class="plot">⬜</div>
+    <div class="plot">⬜</div>
+  </div>
 
-  <main>
-    <div class="garden">
-      <div class="plot">+</div>
-      <div class="plot">+</div>
-      <div class="plot">+</div>
-      <div class="plot">+</div>
-      <div class="plot">+</div>
-      <div class="plot">+</div>
-    </div>
+  <div class="buttons">
+    <button onclick="openShop()">🛒 Магазин</button>
+    <button onclick="water()">💧 Полить</button>
+    <button onclick="plant()">🌱 Посадить</button>
+    <button onclick="resetGame()">🔄 Сбросить</button>
+  </div>
 
-    <div class="buttons">
-      <button onclick="openShop()">🛒 Магазин</button>
-      <button onclick="water()">💧 Полить</button>
-      <button onclick="plant()">🌱 Посадить</button>
-    </div>
-  </main>
-
-  <!-- Магазин -->
-  <div class="shop" id="shop">
-    <div class="shop-content">
-      <button class="close-btn" onclick="closeShop()">×</button>
-      <h3>Магазин</h3>
-      <p>Здесь можно покупать семена и улучшения.</p>
+  <div id="shop">
+    <div class="window">
+      <h2>Магазин</h2>
+      <p>Здесь будут товары...</p>
+      <button onclick="closeShop()">Закрыть</button>
     </div>
   </div>
 
@@ -161,6 +105,12 @@
 
     function plant() {
       alert("Вы посадили семена!");
+    }
+
+    function resetGame() {
+      if (confirm("⚠️ Ты уверен, что хочешь сбросить игру? Прогресс будет утерян!")) {
+        alert("Игра сброшена. Начинай с нуля 🌱");
+      }
     }
   </script>
 </body>
