--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body{margin:0;font-family:sans-serif;background:var(--bg);display:flex;justify-c
 header{display:flex;justify-content:space-between;flex-wrap:wrap;gap:8px;margin-bottom:16px}
 .stats{display:flex;gap:12px;align-items:center}
 .stat{background:var(--card);padding:8px 12px;border-radius:12px;font-weight:600;box-shadow:0 4px 10px rgba(0,0,0,0.05)}
-.garden{display:grid;grid-template-columns:repeat(4,1fr);gap:12px}
+.garden{display:grid;grid-template-columns:repeat(4,1fr);gap:12px;position:relative}
 .bed{background:linear-gradient(180deg,#f0fff0,#d6ffe0);padding:12px;border-radius:16px;min-height:120px;display:flex;flex-direction:column;align-items:center;justify-content:center;position:relative;border:1px solid rgba(34,197,94,0.2);transition:0.3s;box-shadow:0 4px 8px rgba(0,0,0,0.08);}
 .bed.selected{outline:3px solid rgba(74,222,128,0.4);box-shadow:0 10px 30px rgba(74,222,128,0.15)}
 .bed .soil{width:100%;height:48px;background:linear-gradient(180deg,#8b5a2b,#6b3f1f);border-radius:12px;margin-top:10px;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700;transition:0.3s}
@@ -29,6 +29,8 @@ header{display:flex;justify-content:space-between;flex-wrap:wrap;gap:8px;margin-
 .shop-row{display:flex;justify-content:space-between;padding:10px 0;border-bottom:1px dashed #ccc}
 .shop-row:last-child{border-bottom:none}
 .toast{position:fixed;top:20px;left:50%;transform:translateX(-50%);background:var(--warn);color:#fff;padding:10px 16px;border-radius:10px;opacity:0;pointer-events:none;transition:0.5s;z-index:20}.toast.show{opacity:1;pointer-events:auto}
+.water-drop{position:absolute;width:8px;height:12px;background:rgba(59,130,246,0.8);border-radius:50%;animation:fall 0.6s linear;pointer-events:none;}
+@keyframes fall{0%{transform:translateY(0);}100%{transform:translateY(100px);opacity:0;}}
 </style>
 </head>
 <body>
@@ -81,7 +83,7 @@ header{display:flex;justify-content:space-between;flex-wrap:wrap;gap:8px;margin-
 
 <script>
 const GARDEN_SIZE=8;
-const garden=[];
+let garden=[];
 let inventory=[];
 let selectedBed=null;
 let money=parseInt(localStorage.getItem('money'))||20;
@@ -143,19 +145,20 @@ function updateUI(){
 }
 
 function createBeds(){
-  const savedGarden = JSON.parse(localStorage.getItem('garden') || '[]');
-  const savedInventory = JSON.parse(localStorage.getItem('inventory') || '[]');
-  inventory = []; // очищаем инвентарь перед загрузкой
-  savedInventory.forEach(i => inventory.push(i));
-  
-  for(let i = 0; i < GARDEN_SIZE; i++){
-    const bed = {plant: savedGarden[i] || null, progress: (savedGarden[i]?.progress || 0)};
+  garden = [];
+  inventory = [];
+  const savedGarden = JSON.parse(localStorage.getItem('garden')||'[]');
+  const savedInventory = JSON.parse(localStorage.getItem('inventory')||'[]');
+  savedInventory.forEach(i=>inventory.push(i));
+
+  for(let i=0;i<GARDEN_SIZE;i++){
+    const bed={plant:savedGarden[i]||null};
     garden.push(bed);
-    const div = document.createElement('div');
-    div.className = 'bed';
-    div.id = 'bed-' + i;
-    div.innerHTML = '<div class="soil">Пусто</div>';
-    div.addEventListener('click', () => { selectedBed = i; updateUI(); });
+    const div=document.createElement('div');
+    div.className='bed';
+    div.id='bed-'+i;
+    div.innerHTML='<div class="soil">Пусто</div>';
+    div.addEventListener('click',()=>{selectedBed=i;updateUI();});
     gardenEl.appendChild(div);
   }
 }
@@ -174,10 +177,23 @@ function waterBed(){
   if(selectedBed===null){showToast('Выберите грядку');return;}
   const b=garden[selectedBed];
   if(!b.plant){showToast('Нет растения');return;}
-  if(water <= 0){showToast('Воды нет');return;}
+  if(water<=0){showToast('Воды нет');return;}
   water--;
-  b.plant.progress = Math.min(100, (b.plant.progress || 0) + 50); 
+  b.plant.progress=Math.min(100,(b.plant.progress||0)+50);
+  createWaterDrops(garden[selectedBed].plant?document.getElementById('bed-'+selectedBed):null);
   updateUI();
+}
+
+function createWaterDrops(bedEl){
+  if(!bedEl) return;
+  for(let i=0;i<5;i++){
+    const drop=document.createElement('div');
+    drop.className='water-drop';
+    drop.style.left=(10+Math.random()*60)+'px';
+    drop.style.animationDelay=(i*0.1)+'s';
+    bedEl.appendChild(drop);
+    setTimeout(()=>{drop.remove();},600);
+  }
 }
 
 function harvestSelected(){
@@ -199,6 +215,7 @@ setInterval(()=>{
   updateUI();
 },3000);
 
+// Init
 createBeds();
 updateUI();
 
@@ -207,7 +224,7 @@ document.getElementById('plantBtn').addEventListener('click',plantSeed);
 document.getElementById('waterBtn').addEventListener('click',waterBed);
 document.getElementById('harvestBtn').addEventListener('click',harvestSelected);
 
-// Shop with tabs
+// Shop
 const shop=document.getElementById('shop');
 const shopContent=document.getElementById('shopContent');
 const tabShop=document.getElementById('tabShop');
@@ -230,14 +247,15 @@ function renderSell(){
 renderShop();
 tabShop.addEventListener('click',renderShop);
 tabSell.addEventListener('click',renderSell);
-
 document.getElementById('openShop').addEventListener('click',()=>{shop.classList.add('open');});
 document.getElementById('closeShop').addEventListener('click',()=>{shop.classList.remove('open');});
 
+// Inventory
 const inventoryModal=document.getElementById('inventory');
 document.getElementById('openInventory').addEventListener('click',()=>{inventoryModal.classList.add('open');});
 document.getElementById('closeInventory').addEventListener('click',()=>{inventoryModal.classList.remove('open');});
 
+// Settings
 const settings=document.getElementById('settings');
 document.getElementById('openSettings').addEventListener('click',()=>{settings.classList.add('open');});
 document.getElementById('closeSettings').addEventListener('click',()=>{settings.classList.remove('open');});
