--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ header{display:flex;justify-content:space-between;flex-wrap:wrap;gap:8px;margin-
 .bed .soil{width:100%;height:48px;background:linear-gradient(180deg,#8b5a2b,#6b3f1f);border-radius:12px;margin-top:10px;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700;transition:0.3s}
 .bed .plant{position:absolute;top:14px;display:flex;flex-direction:column;align-items:center;gap:6px;transition:0.3s}
 .bed .plant .emoji{font-size:32px;transition:transform 0.5s;}
+.bed .plant .leaves{display:block;transition:transform 0.5s;transform-origin:bottom center;}
 .bed .plant .stage{font-size:12px;color:#111;font-weight:600}
 .bed .plant .progress{width:80px;height:6px;background:#e6f4ea;border-radius:999px;overflow:hidden;display:block;margin-top:4px}
 .bed .plant .progress i{display:block;height:100%;background:linear-gradient(90deg,#34d399,#10b981);width:0%;transition:width 0.5s;}
@@ -124,11 +125,11 @@ function updateUI(){
       if(plantEl) plantEl.remove();
       soilEl.textContent='Пусто';
     } else {
-      soilEl.textContent=''; 
+      soilEl.textContent='';
       if(!plantEl){
         const div=document.createElement('div');
         div.className='plant';
-        div.innerHTML=`<div class="emoji">🥕</div>
+        div.innerHTML=`<div class="leaves">🌿</div><div class="emoji">🥕</div>
         <div class="stage">${b.plant.progress||0}%</div>
         <div class="progress"><i style="width:${b.plant.progress||0}%"></i></div>`;
         el.appendChild(div);
@@ -136,6 +137,9 @@ function updateUI(){
         plantEl.querySelector('.progress i').style.width=(b.plant.progress||0)+'%';
         plantEl.querySelector('.stage').textContent=Math.floor(b.plant.progress||0)+'%';
       }
+      // эффект листьев
+      const leaves=el.querySelector('.leaves');
+      if(leaves) leaves.style.transform=`translateY(${-(b.plant.progress/5)}px) rotate(${Math.sin(Date.now()/500)*10}deg)`;
       const scale=0.5+0.5*(b.plant.progress/100);
       el.querySelector('.plant .emoji').style.transform=`scale(${scale})`;
     }
@@ -145,10 +149,10 @@ function updateUI(){
 }
 
 function createBeds(){
-  garden = [];
-  inventory = [];
-  const savedGarden = JSON.parse(localStorage.getItem('garden')||'[]');
-  const savedInventory = JSON.parse(localStorage.getItem('inventory')||'[]');
+  garden=[];
+  const savedGarden=JSON.parse(localStorage.getItem('garden')||'[]');
+  const savedInventory=JSON.parse(localStorage.getItem('inventory')||'[]');
+  inventory=[];
   savedInventory.forEach(i=>inventory.push(i));
 
   for(let i=0;i<GARDEN_SIZE;i++){
@@ -180,7 +184,7 @@ function waterBed(){
   if(water<=0){showToast('Воды нет');return;}
   water--;
   b.plant.progress=Math.min(100,(b.plant.progress||0)+50);
-  createWaterDrops(garden[selectedBed].plant?document.getElementById('bed-'+selectedBed):null);
+  createWaterDrops(document.getElementById('bed-'+selectedBed));
   updateUI();
 }
 
@@ -209,13 +213,12 @@ function harvestSelected(){
 setInterval(()=>{
   garden.forEach(b=>{
     if(b.plant && b.plant.progress<100){
-      b.plant.progress=Math.min(100,(b.plant.progress||0)+5);
+      b.plant.progress=Math.min(100,(b.plant.progress||0)+2);
     }
   });
   updateUI();
-},3000);
+},1000);
 
-// Init
 createBeds();
 updateUI();
 
